# PearServer

./: .cargo-test-deps.toml  .gitignore  ARCHITECTURE.md  Cargo.toml  PHASE_4_COMPLETE.md  README.md  WINDOWS_SETUP.md  pear.toml.example  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: release.yml
assets/runtimes/: .gitignore  README.md
docs/: CLI_REFERENCE.md  DEPLOYMENT.md
scripts/: setup_runtimes.ps1  setup_runtimes.sh
src/: main.rs
src/ai/: anomaly.rs  ddos.rs  mod.rs  path_monitor.rs  performance_baseline.rs
src/cage/: config.rs  mod.rs  pool.rs
src/cli/: commands.rs  mod.rs
src/config/: acme.rs  mod.rs
src/crdt/: mod.rs  session.rs  sync.rs
src/dashboard/: mod.rs  telemetry.rs  websocket.rs
src/deployment/: mod.rs  rollout.rs
src/network/: config.rs  http2.rs  http3.rs  mod.rs  router_integration.rs
src/observability/: mod.rs
src/router/: health.rs  mod.rs  strategies.rs
src/runtime/: limits.rs  mod.rs  polyglot.rs
src/signals/: mod.rs
src/state/: mod.rs  shared_memory.rs
src/storage/: bind_mount.rs  mod.rs
src/supervisor/: mod.rs  monitor.rs
src/tenancy/: auth.rs  mod.rs  quota.rs
static/: dashboard.css  dashboard.html  dashboard.js
tests/: integration_tests.rs
